--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
   <script type="module">
-    import { initTrafficLightsForIntersection, getDirectionForSegment, Direction } from './trafficLights.js';
+    import { initTrafficLightsForIntersection, getDirectionForSegment, Direction, TrafficLightCoordinator } from './trafficLights.js';
     const CONFIG = {
       WORLD_WIDTH: 3000,
       WORLD_HEIGHT: 2000,
@@ -102,6 +102,22 @@
     let hoverLabel;
     // Хранилище светофоров по ключу перекрёстка
     const intersectionKeyToTL = new Map();
+    // Координатор зеленой волны светофоров
+    const trafficCoordinator = new TrafficLightCoordinator(45); // скорость машин ~45 км/ч
+
+    // 🚦 КОНФИГУРАЦИЯ СВЕТОФОРОВ 🚦
+    // Массив буквенно-цифровых координат перекрестков, где должны быть светофоры
+    // Формат: 'A1', 'B2', 'C3' и т.д. (буква = столбец дороги, цифра = ряд дороги)
+    // Можно легко редактировать этот массив для изменения расположения светофоров!
+    const TRAFFIC_LIGHTS_CONFIG = [
+      'A1', 'A2', 'A3',        // левый столбец (въезд в город)
+      'B2', 'B4',        // второй столбец  
+      'C1', 'C3',        // третий столбец
+      'D2', 'D4',        // четвертый столбец
+      'E1', 'E3',        // пятый столбец
+      'F2', 'F4',        // шестой столбец
+      'G1', 'G2', 'G3', 'G4' // правый столбец (выезд из города) - все перекрестки
+    ];
 
     setupApp();
     setupWorld();
@@ -112,6 +128,21 @@
       app.stage.hitArea = new PIXI.Rectangle(0, 0, 1200, 800);
       layout();
     });
+
+    // Функция для парсинга буквенно-цифровых координат в индексы
+    function parseIntersectionCoordinate (coord) {
+      const letter = coord.charAt(0);
+      const number = parseInt(coord.slice(1));
+      const i = letter.charCodeAt(0) - 65; // A=0, B=1, C=2...
+      const j = number - 1; // 1=0, 2=1, 3=2...
+      return { i, j };
+    }
+
+    // Проверка, есть ли светофор на данном перекрестке
+    function shouldHaveTrafficLight (i, j) {
+      const coord = String.fromCharCode(65 + i) + (j + 1);
+      return TRAFFIC_LIGHTS_CONFIG.includes(coord);
+    }
 
     function setupApp () {
       app = new PIXI.Application({
@@ -517,6 +548,11 @@
           const x = verticalRoadXs[i];
           const y = horizontalRoadYs[j];
 
+          // Проверяем, должен ли быть светофор на этом перекрестке
+          if (!shouldHaveTrafficLight(i, j)) {
+            continue; // пропускаем этот перекресток
+          }
+
           // Определяем, какие дороги есть в каждом направлении
           const roadConnections = {
             north: j > 0 || (x === maxVerticalPos), // дорога на север: внутренний ряд ИЛИ правая дорога (выезд за город)
@@ -536,8 +572,17 @@
             cycle: { green: 4500, yellow: 1200 },
             roadConnections
           });
-          intersectionKeyToTL.set(`${x},${y}`, tl);
+          const key = `${x},${y}`;
+          intersectionKeyToTL.set(key, tl);
+
+          // Регистрируем светофор в координаторе зеленой волны
+          trafficCoordinator.addTrafficLight(key, tl, x, y);
         }
+      }
+
+      // Устанавливаем точку начала зеленой волны в левом верхнем углу
+      if (verticalRoadXs.length > 0 && horizontalRoadYs.length > 0) {
+        trafficCoordinator.setWaveOrigin(verticalRoadXs[0], horizontalRoadYs[0]);
       }
     }
 
